nullaway_error_d8e138e5-6522-4099-a15f-d2fa60774c80.txt
/home/nima/Developer/nullness-benchmarks/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/web/embedded/netty/SslServerCustomizer.java:76: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.ssl = ssl;
		         ^
    (see http://t.uber.com/nullaway )
